fixed issue with user-create overflow

--- a/soci.styl
+++ b/soci.styl
@@ -426,10 +426,10 @@ soci-route[active]
   overflow-x: hidden
 
 #user-create
-  display: block
-  padding: 28px 40px
-  max-width: 800px
-  margin: 0 auto
+  .content
+    padding: 28px 40px
+    max-width: 800px
+    margin: 0 auto
   .loading-block:not(:first-child)
     margin-top: 40px
   
